--- a/alba.cabal
+++ b/alba.cabal
@@ -210,6 +210,7 @@ executable test
   hs-source-dirs:
       test
   other-modules:
+      Exponentiation,
       LibauthSupport,
       MergeSort,
       TestArguments,
