--- a/alba.cabal
+++ b/alba.cabal
@@ -115,7 +115,6 @@ library
       Alba.Tx.Bch2025.TxOut,
       Alba.Tx.Bch2025.TxOuts,
       Alba.Vm.Bch2025,
-      Alba.Vm.Bch2025.OpClasses,
       Alba.Vm.Bch2025.SigCheckUtils,
       Alba.Vm.Bch2025.SigEncoding,
       Alba.Vm.Bch2025.TxContext,
@@ -145,6 +144,7 @@ library
       Alba.Vm.Common.BasicTypes,
       Alba.Vm.Common.Crypto,
       Alba.Vm.Common.Logging,
+      Alba.Vm.Common.OpClasses,
       Alba.Vm.Common.OpcodeL1,
       Alba.Vm.Common.OpcodeL2,
       Alba.Vm.Common.ScriptError,
