Initial support for opEval in the Dsl.

--- a/alba.cabal
+++ b/alba.cabal
@@ -81,6 +81,10 @@ library
       Alba.Dsl.V1.Bch2025.Stack,
       Alba.Dsl.V1.Bch2025.TxDsl,
       Alba.Dsl.V1.Bch2025.Version,
+      Alba.Dsl.V1.Bch2026,
+      Alba.Dsl.V1.Bch2026.Lang,
+      Alba.Dsl.V1.Bch2026.Stack,
+      Alba.Dsl.V1.Bch2026.Ops,
       Alba.Dsl.V1.Common,
       Alba.Dsl.V1.Common.Contract,
       Alba.Dsl.V1.Common.ContractCashScriptArtifact,
@@ -214,6 +218,7 @@ executable test
       TestCustomTypes,
       TestDataPushing,
       TestDataSig,
+      TestEval,
       TestIntPushing,
       TestInteger,
       TestIntrospection,
