--- a/alba.cabal
+++ b/alba.cabal
@@ -117,7 +117,6 @@ library
       Alba.Vm.Bch2025,
       Alba.Vm.Bch2025.SigCheckUtils,
       Alba.Vm.Bch2025.SigEncoding,
-      Alba.Vm.Bch2025.TxContext,
       Alba.Vm.Bch2025.Utils,
       Alba.Vm.Bch2025.Vm,
       Alba.Vm.Bch2025.VmOpArithmetic,
@@ -149,6 +148,8 @@ library
       Alba.Vm.Common.OpcodeL2,
       Alba.Vm.Common.ScriptError,
       Alba.Vm.Common.StackElement,
+      Alba.Vm.Common.Tx,
+      Alba.Vm.Common.TxContext,
       Alba.Vm.Common.Utils,
       Alba.Vm.Common.Vm,
       Alba.Vm.Common.VmBool,
