--- a/alba.cabal
+++ b/alba.cabal
@@ -139,6 +139,7 @@ library
       Alba.Vm.Bch2026.Vm,
       Alba.Vm.Bch2026.VmOpEval,
       Alba.Vm.Bch2026.VmOps,
+      Alba.Vm.Bch2026.VmParams,
       Alba.Vm.Common,
       Alba.Vm.Common.BasicTypes,
       Alba.Vm.Common.Crypto,
