--- a/alba.cabal
+++ b/alba.cabal
@@ -69,29 +69,29 @@ library
   import: shared-properties
   exposed-modules:
       Alba.Dsl.V1.Bch2025,
-      Alba.Dsl.V1.Bch2025.CashScriptOptimizerRules,
-      Alba.Dsl.V1.Bch2025.Compile,
-      Alba.Dsl.V1.Bch2025.CompilerUtils,
       Alba.Dsl.V1.Bch2025.Contract.Prelude,
       Alba.Dsl.V1.Bch2025.Infix,
       Alba.Dsl.V1.Bch2025.Lang,
       Alba.Dsl.V1.Bch2025.LangArgs,
-      Alba.Dsl.V1.Bch2025.LangDispatch,
       Alba.Dsl.V1.Bch2025.Ops,
       Alba.Dsl.V1.Bch2025.Stack,
       Alba.Dsl.V1.Bch2025.TxDsl,
       Alba.Dsl.V1.Bch2025.Version,
       Alba.Dsl.V1.Bch2026,
       Alba.Dsl.V1.Bch2026.Lang,
-      Alba.Dsl.V1.Bch2026.Stack,
       Alba.Dsl.V1.Bch2026.Ops,
+      Alba.Dsl.V1.Bch2026.Stack,
       Alba.Dsl.V1.Common,
+      Alba.Dsl.V1.Common.CashScriptOptimizerRules,
+      Alba.Dsl.V1.Common.Compile,
+      Alba.Dsl.V1.Common.CompilerUtils,
       Alba.Dsl.V1.Common.Contract,
       Alba.Dsl.V1.Common.ContractCashScriptArtifact,
       Alba.Dsl.V1.Common.ContractDoc,
       Alba.Dsl.V1.Common.FlippedCons,
       Alba.Dsl.V1.Common.Lang,
       Alba.Dsl.V1.Common.LangArgs,
+      Alba.Dsl.V1.Common.LangDispatch,
       Alba.Dsl.V1.Common.Listing,
       Alba.Dsl.V1.Common.Stack,
       Alba.Dsl.V1.Common.TermClass,
