--- a/alba.cabal
+++ b/alba.cabal
@@ -203,6 +203,10 @@ executable demo
   other-modules:
     Demo,
     DemoPrelude,
+    RecursionExamples.EllipticCurve,
+    RecursionExamples.EllipticCurveConstants,
+    RecursionExamples.EllipticCurveField,
+    RecursionExamples.EllipticCurvePoint,
     RecursionExamples.Exponentiation,
     RecursionExamples.MergeSort,
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
@@ -215,11 +219,16 @@ executable test
       test
   other-modules:
       LibauthSupport,
+      QuickCheckSupport,
+      RecursionExamples.EllipticCurve,
+      RecursionExamples.EllipticCurveConstants,
+      RecursionExamples.EllipticCurveField,
+      RecursionExamples.EllipticCurvePoint,
       RecursionExamples.Exponentiation,
       RecursionExamples.MergeSort,
       TestArguments,
-      TestCheckSig,
       TestCheckMultiSig,
+      TestCheckSig,
       TestCustomTypes,
       TestDataPushing,
       TestDataSig,
@@ -242,7 +251,6 @@ executable test
       TestOptimizer,
       TestStackBranches,
       TestUtils,
-      QuickCheckSupport,
   build-depends: alba, scientific
 
 executable benchmark
