--- a/cabal.project
+++ b/cabal.project
@@ -6,6 +6,10 @@ packages: alba.cabal bchn-secp256k1
 jobs: $ncpus
 semaphore: true
 
+optimization: 1
+package *
+  optimization: 1
+
 source-repository-package
     type: git
     location: https://github.com/albaDsl/haskoin-core-bch-lite.git
