Packed and unpacked data representation.

--- a/alba.cabal
+++ b/alba.cabal
@@ -204,6 +204,8 @@ executable demo
     Demo,
     DemoPrelude,
     RecursionExamples.EllipticCurve,
+    RecursionExamples.EllipticCurvePacked,
+    RecursionExamples.EllipticCurveUnpacked,
     RecursionExamples.EllipticCurveConstants,
     RecursionExamples.EllipticCurveField,
     RecursionExamples.EllipticCurvePoint,
@@ -221,6 +223,8 @@ executable test
       LibauthSupport,
       QuickCheckSupport,
       RecursionExamples.EllipticCurve,
+      RecursionExamples.EllipticCurvePacked,
+      RecursionExamples.EllipticCurveUnpacked,
       RecursionExamples.EllipticCurveConstants,
       RecursionExamples.EllipticCurveField,
       RecursionExamples.EllipticCurvePoint,
