Implement loops support in the VM.

--- a/alba.cabal
+++ b/alba.cabal
@@ -142,6 +142,7 @@ library
       Alba.Vm.Bch2026,
       Alba.Vm.Bch2026.Vm,
       Alba.Vm.Bch2026.VmOpEval,
+      Alba.Vm.Bch2026.VmOpLoops,
       Alba.Vm.Bch2026.VmOps,
       Alba.Vm.Bch2026.VmParams,
       Alba.Vm.Common,
