Implement OP_DEFINE / OP_INVOKE constructs in the DSL.

--- a/alba.cabal
+++ b/alba.cabal
@@ -52,6 +52,7 @@ common shared-properties
       bchn-secp256k1,
       memory,
       microlens,
+      mtl,
       optparse-applicative,
       pretty-simple,
       secp256k1-haskell,
@@ -169,17 +170,15 @@ library
       Alba.Vm.Common.VmStack,
       Alba.Vm.Common.VmState,
       DslDemo.EllipticCurve.EllipticCurve,
-      DslDemo.EllipticCurve.EllipticCurvePacked,
       DslDemo.EllipticCurve.EllipticCurvePackedCommon,
       DslDemo.EllipticCurve.EllipticCurvePackedNonRecursive,
-      DslDemo.EllipticCurve.EllipticCurveUnpacked,
       DslDemo.EllipticCurve.EllipticCurveUnpackedCommon,
       DslDemo.EllipticCurve.EllipticCurveUnpackedNonRecursive,
       DslDemo.EllipticCurve.EllipticCurveConstants,
       DslDemo.EllipticCurve.EllipticCurveField,
       DslDemo.EllipticCurve.EllipticCurvePoint,
       DslDemo.Exponentiation,
-      DslDemo.MergeSort.MergeSortEval
+      DslDemo.MergeSort.MergeSort,
   hs-source-dirs: src
 
 executable alba
@@ -237,11 +236,12 @@ executable test
       TestCustomTypes,
       TestDataPushing,
       TestDataSig,
-      TestEval,
+      TestFunctions,
       TestIntPushing,
       TestInteger,
       TestIntrospection,
       TestInvalidStack,
+      TestLambdas,
       TestLibauthVectors2025,
       TestLibauthVectors2026,
       TestLibauthVectorsExclusions2025,
