--- a/alba.cabal
+++ b/alba.cabal
@@ -169,13 +169,13 @@ library
       Alba.Vm.Common.VmParams,
       Alba.Vm.Common.VmStack,
       Alba.Vm.Common.VmState,
-      DslDemo.EllipticCurve.EllipticCurvePackedCommon,
-      DslDemo.EllipticCurve.EllipticCurvePacked,
-      DslDemo.EllipticCurve.EllipticCurveUnpackedCommon,
-      DslDemo.EllipticCurve.EllipticCurveUnpacked,
-      DslDemo.EllipticCurve.EllipticCurveConstants,
-      DslDemo.EllipticCurve.EllipticCurveField,
-      DslDemo.EllipticCurve.EllipticCurvePoint,
+      DslDemo.EllipticCurve.PackedCommon,
+      DslDemo.EllipticCurve.Packed,
+      DslDemo.EllipticCurve.UnpackedCommon,
+      DslDemo.EllipticCurve.Unpacked,
+      DslDemo.EllipticCurve.Constants,
+      DslDemo.EllipticCurve.Field,
+      DslDemo.EllipticCurve.Point,
       DslDemo.EllipticCurve.Native.Affine,
       DslDemo.EllipticCurve.Native.Constants,
       DslDemo.EllipticCurve.Native.FieldElement,
