Introduce functions in the EC implementation.

--- a/alba.cabal
+++ b/alba.cabal
@@ -169,11 +169,10 @@ library
       Alba.Vm.Common.VmParams,
       Alba.Vm.Common.VmStack,
       Alba.Vm.Common.VmState,
-      DslDemo.EllipticCurve.EllipticCurve,
       DslDemo.EllipticCurve.EllipticCurvePackedCommon,
-      DslDemo.EllipticCurve.EllipticCurvePackedNonRecursive,
+      DslDemo.EllipticCurve.EllipticCurvePacked,
       DslDemo.EllipticCurve.EllipticCurveUnpackedCommon,
-      DslDemo.EllipticCurve.EllipticCurveUnpackedNonRecursive,
+      DslDemo.EllipticCurve.EllipticCurveUnpacked,
       DslDemo.EllipticCurve.EllipticCurveConstants,
       DslDemo.EllipticCurve.EllipticCurveField,
       DslDemo.EllipticCurve.EllipticCurvePoint,
