Implement EC Jacobian formulation in DSL.

--- a/alba.cabal
+++ b/alba.cabal
@@ -174,6 +174,9 @@ library
       DslDemo.EllipticCurve.Constants,
       DslDemo.EllipticCurve.Field,
       DslDemo.EllipticCurve.Point,
+      DslDemo.EllipticCurve.Jacobian,
+      DslDemo.EllipticCurve.JacobianAdd,
+      DslDemo.EllipticCurve.JacobianPoint,
       DslDemo.EllipticCurve.Native.Affine,
       DslDemo.EllipticCurve.Native.Constants,
       DslDemo.EllipticCurve.Native.FieldElement,
