--- a/alba.cabal
+++ b/alba.cabal
@@ -169,8 +169,8 @@ library
       Alba.Vm.Common.VmParams,
       Alba.Vm.Common.VmStack,
       Alba.Vm.Common.VmState,
-      DslDemo.EllipticCurve.PackedCommon,
-      DslDemo.EllipticCurve.Packed,
+      DslDemo.EllipticCurve.Affine,
+      DslDemo.EllipticCurve.AffineAdd,
       DslDemo.EllipticCurve.Constants,
       DslDemo.EllipticCurve.Field,
       DslDemo.EllipticCurve.Point,
